--- a/falcon-heavy.html
+++ b/falcon-heavy.html
@@ -7,7 +7,8 @@
     <!--Links to pre connect to google fonts for styling // saves time -> browser optimization-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Familjen+Grotesk:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Familjen+Grotesk:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
 
 
@@ -29,8 +30,9 @@
             <li class="mobile-only"><a href="falcon-heavy.html">Falcon Heavy</a></li>
             <li class="mobile-only"><a href="dragon.html">Dragon</a></li>
             <li class="mobile-only"><a href="#">Starship</a></li>
-            <li class="mobile-only"><a href="#">Human Space flight</a></li>
+            <li class="mobile-only"><a href="#">Human Spaceflight</a></li>
             <li class="mobile-only"><a href="#">Rideshare</a></li>
+            <li class="mobile-only"><a href="#">Starshield</a></li>
             <li class="mobile-only"><a href="#">Starlink</a></li>
         </ul>
     </div>
@@ -48,7 +50,10 @@
                 <li><a href="#">Starship</a></li>
                 <li><a href="#">Human Space flight</a></li>
                 <li><a href="#">Rideshare</a></li>
+                <li><a href="#">Starshield</a></li>
                 <li><a href="#">Starlink</a></li>
+            </ul>
+            <ul>
                 <li><a href="#">Shop</a></li>
             </ul>
         </nav>
